tests/neg/parser-stability-14.scala
object x0 {
{
val x1 x0   // error
object x1   // error
// error